// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="layout-page projects-page"
>
  <HelmetWrapper
    encodeSpecialCharacters={true}
    title="projects.page"
  />
  <div
    className="layout-page-side-outer"
  >
    <div
      className="layout-page-side projects-page-side"
      style={
        Object {
          "top": 30,
        }
      }
    >
      <div
        className="layout-page-side-inner"
      >
        <div
          className="layout-page-filters"
        >
          <PageSidebar
            isFavorite={false}
            query={Object {}}
            view="overall"
            visualization="risk"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-page-main projects-page-content"
  >
    <div
      className="layout-page-header-panel layout-page-main-header"
    >
      <div
        className="layout-page-header-panel-inner layout-page-main-header-inner"
      >
        <div
          className="layout-page-main-inner"
        >
          <PageHeaderContainer
            isFavorite={false}
            onPerspectiveChange={[Function]}
            onSortChange={[Function]}
            query={Object {}}
            selectedSort="name"
            view="overall"
            visualization="risk"
          />
        </div>
      </div>
    </div>
    <div
      className="layout-page-main-inner"
    >
      <ProjectsListContainer
        cardType="overall"
        isFavorite={false}
        isFiltered={false}
      />
      <ProjectsListFooterContainer
        isFavorite={false}
        query={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`renders 2`] = `
<div
  className="layout-page projects-page"
>
  <HelmetWrapper
    encodeSpecialCharacters={true}
    title="projects.page"
  />
  <div
    className="layout-page-side-outer"
  >
    <div
      className="layout-page-side projects-page-side"
      style={
        Object {
          "top": 30,
        }
      }
    >
      <div
        className="layout-page-side-inner"
      >
        <div
          className="layout-page-filters"
        >
          <PageSidebar
            isFavorite={false}
            query={
              Object {
                "view": "visualizations",
              }
            }
            view="visualizations"
            visualization="risk"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-page-main projects-page-content"
  >
    <div
      className="layout-page-header-panel layout-page-main-header"
    >
      <div
        className="layout-page-header-panel-inner layout-page-main-header-inner"
      >
        <div
          className="layout-page-main-inner"
        >
          <PageHeaderContainer
            isFavorite={false}
            onPerspectiveChange={[Function]}
            onSortChange={[Function]}
            query={
              Object {
                "view": "visualizations",
              }
            }
            selectedSort="name"
            view="visualizations"
            visualization="risk"
          />
        </div>
      </div>
    </div>
    <div
      className="layout-page-main-inner"
    >
      <Connect(Visualizations)
        visualization="risk"
      />
    </div>
  </div>
</div>
`;
